FallingBlocks: fixes